--- a/app/src/main/res/layout/item_heroe.xml
+++ b/app/src/main/res/layout/item_heroe.xml
@@ -1,13 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView
-        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_margin="4dp"
+        android:layout_gravity="center"
         android:orientation="vertical"
         app:cardCornerRadius="5dp"
         app:cardPreventCornerOverlap="true"
         app:layout_collapseParallaxMultiplier="@android:integer/config_mediumAnimTime"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="150dp">
+
+    <androidx.appcompat.widget.AppCompatImageView
+            android:transitionName="heroImage"
+            android:id="@+id/ivHero"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
 
     <TextView
             android:gravity="center"
@@ -17,11 +27,5 @@
             android:id="@+id/tvHeroName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-
-    <androidx.appcompat.widget.AppCompatImageView
-            android:transitionName="heroImage"
-            android:id="@+id/ivHero"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
 
 </com.google.android.material.card.MaterialCardView>
