--- a/app/src/main/res/layout/activity_herodetail.xml
+++ b/app/src/main/res/layout/activity_herodetail.xml
@@ -19,6 +19,7 @@
 
             <ImageView
                 android:id="@+id/photoImageView"
+                android:scaleType="centerCrop"
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 app:layout_collapseMode="parallax"
