--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
              android:layout_height="match_parent">
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
+            android:theme="@style/AppTheme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
