--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:animateLayoutChanges="true">
     <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:theme="@style/AppTheme"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+    
+    <ProgressBar
+            android:layout_below="@+id/toolbar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="fill_parent"
+            android:indeterminateOnly="true"
+            android:layout_height="wrap_content"
+            android:id="@+id/progressBar"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"/>
 
     <androidx.recyclerview.widget.RecyclerView
-            android:layout_below="@+id/toolbar"
+            android:layout_below="@+id/progressBar"
             android:id="@+id/heroesrecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
