--- a/app/src/main/res/layout/item_comic.xml
+++ b/app/src/main/res/layout/item_comic.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_margin="3dp"
+        android:id="@+id/comicContainer"
+        android:background="?selectableItemBackground"
+        android:layout_width="140dp"
+        android:layout_height="200dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardCornerRadius="3dp">
 
-    <androidx.cardview.widget.CardView
-            android:id="@+id/comicContainer"
-            android:background="?selectableItemBackground"
-            android:layout_width="70dp"
-            android:layout_height="100dp"
-            app:cardPreventCornerOverlap="true"
-            app:cardCornerRadius="3dp">
-
-        <ImageView
-                android:id="@+id/comicImage"
-                android:scaleType="centerCrop"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-    </androidx.cardview.widget.CardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:id="@+id/comicName"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+</androidx.cardview.widget.CardView>
